# USFlights

./: Cargo.toml  README.md
scripts/: Carriers.sql  Flights.sql  USAirports.sql  createUSFlightsSchema.sql
src/: main.rs  startup.rs
src/routes/: health_check.rs
