[package]
name = "usflights"
version = "0.1.0"
authors = ["Jonatan Vicente <it@jonatanvicente.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "usflights"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }



[dev-dependencies]
reqwest = "0.12"